--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-axios": "^0.17.1",
+    "react-native-paper": "^5.3.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-swiper": "^1.6.0",
