--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-axios": "^0.17.1",
+    "react-native-pager-view": "^6.1.4",
     "react-native-paper": "^5.3.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.8"
   },
